1)Login.css : aggiornato lo stile 2)Ticket.css : aggiunto css di hide/show della colonna del date 3)home.html: aggiunstato link href e href di anchors 4)login.html: aggiustato link href, href di anchors 5)Profile.html : aggiustato js link href 6)Login.js : aggiustato fetch di login(da username -> email, agiunto role in localStorage, aggiustato if else dei ruoli + window.location.href) 7)Profile.js : piccoli aggiustamenti 8)Restrazione.js : aggiustato window.location.href 9)Ticket.js : piccole modifiche al fetch di get ticket(reso i dati degli elementi dinamici, aggiustato il token nell'header) 10)TicketOperatore.js: piccole modifiche al fetch di get ticket(token nell'header, creazione di una nuova colonna per le modifiche dello stato dei ticket, completato modifaStato fetch)

--- a/CSS/Ticket.css
+++ b/CSS/Ticket.css
@@ -146,3 +146,15 @@ body {
         padding: 10px;
     }
 }
+.stato {
+    font-size: .55rem;
+    border-radius: .99rem;
+    border-radius: .99rem;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+@media screen and (max-width: 600px) {
+    .data-tb {
+      display: none;
+    }
+  }
