--- a/CSS/Profile.css
+++ b/CSS/Profile.css
@@ -13,7 +13,7 @@ body {
     width: 50%;
     margin: 50px auto;
     padding: 30px;
-    background-color: #ffffff;
+    background-color: #13ffb0;
     border-radius: 8px;
     box-shadow: 0 10px 8px rgba(157, 157, 157, 0.1);
 }
