--- a/CSS/InvioTicket.css
+++ b/CSS/InvioTicket.css
@@ -2,16 +2,24 @@
 
 /* Stile generale */
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background: linear-gradient(135deg, #ffcc00, #ff6a00);
-    color: #fff;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
+}
+
+
+
+/* Box principale del form */
+.titolo-form {
+    margin-top: 20px;
+    color: #fff;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.6);
+    font-size: 80px;
 }
 
 
@@ -60,34 +68,12 @@ body {
 .btn-primary:hover {
     background-color: #ffcc00;
 }
-/* Pulsante Home */
-.home-button {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-}
 
-.btn-home {
-    background: #ffaa00;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    text-decoration: none;
-    cursor: pointer;
-    transition: background 0.3s;
-}
-
-.btn-home:hover {
-    background: #ff6a00;
-}
 /* Responsività */
 @media (max-width: 768px) {
     .titolo-form {
-        font-size: 2em;
+        font-size: 4rem;
     }
-
     .blocco-body {
         padding: 20px;
     }
