--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -2,9 +2,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
     background: linear-gradient(135deg, #ffcc00, #ff6a00);
-    color: #fff;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -13,7 +11,7 @@ body {
 
 /* Contenitore principale */
 .container {
-    background: rgba(0, 0, 0, 0.7);
+    background-color: rgba(255, 255, 255, 0.9);
     padding: 30px; /* Padding uniforme su tutti i lati */
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
@@ -23,9 +21,9 @@ body {
 
 /* Titolo */
 h1 {
+    margin-top: 20px;
     margin-bottom: 20px;
     font-size: 32px;
-    color: #fff;
 }
 
 /* Form */
@@ -44,7 +42,8 @@ input[type="password"] {
     margin: 10px 0; /* Spaziatura verticale */
     border: none;
     border-radius: 5px;
-    background: #f1f1f1;
+    border: 1px solid #ddd;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
     color: #333;
     font-size: 16px;
 }
@@ -80,37 +79,4 @@ p a {
 
 p a:hover {
     color: #ff6a00;
-}
-
-/* Pulsante Home */
-.home-button {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-}
-
-.btn-home {
-    background: #ffaa00;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    text-decoration: none;
-    cursor: pointer;
-    transition: background 0.3s;
-}
-
-.btn-home:hover {
-    background: #ff6a00;
-}
-
-/* Footer */
-footer {
-    position: absolute;
-    bottom: 10px;
-    width: 100%;
-    text-align: center;
-    color: #fff;
-    font-size: 12px;
 }
