--- a/CSS/Profile.css
+++ b/CSS/Profile.css
@@ -2,52 +2,28 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
     background: linear-gradient(135deg, #ffcc00, #ff6a00);
-    color: #fff;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-/* Pulsante Home */
-.home-button {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-}
 
-.btn-home {
-    background: #ffaa00;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    text-decoration: none;
-    cursor: pointer;
-    transition: background 0.3s;
-}
-
-.btn-home:hover {
-    background: #ff6a00;
-}
 /* Contenitore principale */
-.card-profile {
-    background: rgba(0, 0, 0, 0.7);
-    padding: 30px 40px;
+.container {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 30px; /* Padding uniforme su tutti i lati */
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-    width: 100%;
-    max-width: 500px;
+    width: 350px;
     text-align: center;
 }
 
 /* Titolo */
 h1 {
+    margin-top: 20px;
     margin-bottom: 20px;
     font-size: 32px;
-    color: #fff;
 }
 
 /* Sezione profilo */
@@ -69,7 +45,8 @@ h1 {
     margin: 5px 0;
     border: none;
     border-radius: 5px;
-    background: #f1f1f1;
+    border: 1px solid #ddd;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
     color: #333;
     font-size: 16px;
     transition: background 0.3s;
