--- a/CSS/Ticket.css
+++ b/CSS/Ticket.css
@@ -23,12 +23,12 @@ body {
 /* Blocco principale */
 .blocco-body {
     width: 100%;
-    max-width: 800px;
+    max-width: 1500px;
     background-color: rgba(255, 255, 255, 0.9);
     padding: 30px;
     border-radius: 20px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
-   margin: 20px auto;
+    margin: 20px auto;
 }
 
 /* Pulsanti */
@@ -137,3 +137,8 @@ body {
       display: none;
     }
   }
+
+  .stato option {
+    background-color: white;
+    color: black; /* Assicurati che il testo sia leggibile */
+}
