--- a/CSS/login.css
+++ b/CSS/login.css
@@ -10,9 +10,11 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+/* Contenitore principale */
 .container {
     background: rgba(0, 0, 0, 0.7);
-    padding: 30px; 
+    padding: 30px; /* Padding uniforme su tutti i lati */
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     width: 350px;
@@ -43,7 +45,7 @@ input[type="password"] {
     border: none;
     border-radius: 5px;
     background: #f1f1f1;
-    color: #3e3e3e;
+    color: #333;
     font-size: 16px;
 }
 
