--- a/CSS/Base.css
+++ b/CSS/Base.css
@@ -8,55 +8,10 @@ body {
     transition: background-color 0.3s ease;
 }
 
-
-
-/* Bottone login */
-.login-button {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    padding: 10px 20px;
-    background-color: #ffcc00;
-    color: #333;
-    border-radius: 20px;
-    text-decoration: none;
-    font-weight: bold;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-}
-
-.login-button:hover {
-    background-color: #ffaa00;
-    transform: scale(1.1);
-}
-
-
 /* Titolo della pagina */
 .titolo {
     text-align: center;
     margin: 30px 0;
-}
-
-/* Pulsante Home */
-.home-button {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-}
-
-.btn-home {
-    background:#ff6a00;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    text-decoration: none;
-    cursor: pointer;
-    transition: background 0.3s;
-}
-
-.btn-home:hover {
-    background:#ffcc00;
 }
 
 
@@ -70,4 +25,53 @@ footer {
     font-size: 12px;
 }
 
+/* Icona login */
+.avatar {
+   
+    position: absolute;
+    top: 20px;
+    right: 90px;
+    font-size: 40px;
+    color: #fff;
+    cursor: pointer;
+    transition: transform 0.5s ease, color 0.3s ease;
+}
 
+.avatar:hover {
+    transform: scale(1.3);
+    color: #ffd700;
+}
+
+/* Animazione di fade-in */
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+/* Icona home */
+.home-button {
+    margin-right: 10px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 40px;
+    color: #fff;
+    cursor: pointer;
+    transition: transform 0.5s ease, color 0.3s ease;
+}
+
+.home-button:hover{
+    transform: scale(1.3);
+    color: #ffd700;
+}
+
+.header-btn {
+    display: flex;
+    align-items: center; /* Opzionale: allinea verticalmente al centro */
+    justify-content: flex-start; /* Opzionale: allinea orizzontalmente all'inizio */
+  }
