--- a/CSS/Chart.css
+++ b/CSS/Chart.css
@@ -28,3 +28,58 @@ canvas {
     font-size: 2rem;
   }
 }
+
+/* Icona login */
+.avatar {
+   
+  position: absolute;
+  top: 20px;
+  right: 90px;
+  font-size: 40px;
+  color: #fff;
+  cursor: pointer;
+  transition: transform 0.5s ease, color 0.3s ease;
+}
+
+.avatar:hover {
+  transform: scale(1.3);
+  color: #ffd700;
+}
+
+/* Animazione di fade-in */
+@keyframes fadeIn {
+  0% {
+      opacity: 0;
+  }
+
+  100% {
+      opacity: 1;
+  }
+}
+
+/* Icona home */
+.home-button {
+  margin-right: 10px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 40px;
+  color: #fff;
+  cursor: pointer;
+  transition: transform 0.5s ease, color 0.3s ease;
+}
+
+.home-button:hover{
+  transform: scale(1.3);
+  color: #ffd700;
+}
+
+.header-btn {
+  display: flex;
+  align-items: center; /* Opzionale: allinea verticalmente al centro */
+  justify-content: flex-start; /* Opzionale: allinea orizzontalmente all'inizio */
+}
+
+header {
+  margin-bottom: 100px;
+}
