--- a/CSS/home.css
+++ b/CSS/home.css
@@ -36,11 +36,15 @@ header p {
     opacity: 0.85;
 }
 
+.header-content{
+    justify-content: center;
+}
+
 /* Icona login */
 .avatar {
     position: absolute;
     top: 20px;
-    right: 20px;
+    right: 90px;
     font-size: 50px;
     color: #fff;
     cursor: pointer;
@@ -62,6 +66,31 @@ header p {
         opacity: 1;
     }
 }
+
+
+/* Icona home */
+.home-button {
+    margin-right: 10px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 40px;
+    color: #fff;
+    cursor: pointer;
+    transition: transform 0.5s ease, color 0.3s ease;
+}
+
+.home-button:hover{
+    transform: scale(1.3);
+    color: #ffd700;
+}
+
+.header-btn {
+    display: flex;
+    align-items: center; /* Opzionale: allinea verticalmente al centro */
+    justify-content: flex-start; /* Opzionale: allinea orizzontalmente all'inizio */
+  }
+
 
 /* Sezione Apri Ticket */
 .open-ticket {
