--- a/CSS/Base.css
+++ b/CSS/Base.css
@@ -14,6 +14,12 @@ body {
     margin: 30px 0;
 }
 
+.logo {
+    width: 60px;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
 
 /* Footer */
 footer {
