--- a/CSS/Profile.css
+++ b/CSS/Profile.css
@@ -34,6 +34,7 @@ body {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     width: 350px;
     text-align: center;
+    min-height: auto;
 }
 
 /* Titolo */
