--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,4 +1,4 @@
-
+/* todo cambiare la home con l'icona dell'avatar, cambiare le card metterne 4 */
 * {
     margin: 0;
     padding: 0;
@@ -146,23 +146,3 @@ footer a:hover {
     text-decoration: underline;
 }
 
-/* Pulsante "Torna su" */
-#back-to-top {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    padding: 15px;
-    background-color: #ffaa00;
-    color: #fff;
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    font-size: 1.5em;
-    transition: background-color 0.3s, transform 0.3s;
-}
-
-#back-to-top:hover {
-    background-color: #ffaa00;
-    transform: scale(1.1);
-}
